<resources>

    <string name="app_name">WeatherApp</string>

    <!--Base Fragment-->
    <string name="base_fragment_error_dialog_title">Error!</string>

    <!-- Main Screen Layout -->
    <string name="main_screen_option_pick_location">Current location</string>
    <string name="main_screen_option_pick_from_list">Pick from list</string>

    <!--Main Fragment-->
    <string name="location_permission_alert_dialog_title">This permission is needed because weather
        details cannot be displayed if the app is not able to detect your current locationDbModel.</string>
    <string name="location_permission_alert_rationale_message">Permission needed</string>
    <string name="location_permission_alert_positive_button_text">OK</string>
    <string name="location_permission_alert_negative_button_text">Cancel</string>
    <string name="location_permission_alert_permission_denied">Permission denied</string>
    <string name="location_permission_alert_never_ask_again">Never ask again</string>

    <!--Location Alert Dialog-->
    <string name="gps_alert_dialog_title_text">SETTINGS</string>
    <string name="gps_alert_dialog_message_text">Enable Location Provider! Go to settings menu?</string>
    <string name="gps_alert_dialog_positive_button_text">SETTINGS</string>

    <!--Locations List Fragment-->
    <string name="locations_list_fragment_edit_text_hint">Enter to search:</string>
    <string name="text_no_results_found">No results found</string>

    <!--Weather Details-->
    <string name="txt_current_temp_celsius">%1$s<sup>\u00B0C</sup></string>
    <string name="txt_current_temp_fahrenheit">\u2109</string>
    <string name="txt_current_wind_speed">%1$s km/h</string>

    <string name="txt_last_updated">Last updated: %1$s</string>
    <string name="txt_wind_speed">Wind speed: %1$s km/h</string>
    <string name="txt_temperature">Temperature: %1$s<sup>\u00B0C</sup></string>
    <string name="txt_apparent_temperature">Feels like: %1$s<sup>\u00B0C</sup></string>
    <string name="txt_humidity">Humidity: %1$s %%</string>
    <string name="txt_pressure">Pressure: %1$s hPa</string>
    <string name="txt_summary_windy">Windy</string>
    <string name="txt_html_degrees_celsius"><![CDATA[<sup>\u00B0c</sup>]]></string>

    <!--WeatherDetailsPagerAdapter-->
    <string name="weather_details_tab_hourly_title">Hourly</string>
    <string name="weather_details_tab_daily_title">Daily</string>
    <string name="weather_details_tab_detailed_title">Detailed</string>
    <string name="weather_details_tab_settings_title">Settings</string>

    <!--Settings Screen-->
    <string name="preferences_category_themes_mode_title">Switch theme auto mode</string>
    <string name="preference_switch_themes_key">themes</string>
    <string name="preference_switch_themes_summary">Auto mode is currently ON</string>
    <string name="preference_switch_themes_title">Turn auto mode on/off</string>
    <string name="preferences_category_feedback_title">Feedback</string>
    <string name="preference_feedback_summary">Our team is at your service MON-SUN
        24/7 and will be more than happy to help :)</string>
    <string name="preference_feedback_title">Email us!</string>
    <string name="preference_feedback_key">feedback</string>
    <string name="preference_feedback_sample_email_one">hrisko_drisko@vba.com</string>
    <string name="preference_feedback_sample_email_two">drisko_hrisko@blabla.com</string>
    <string name="preference_feedback_subject_text">About WeatherApp</string>
    <string name="preference_feedback_subject_extra_text">-->Enter text here</string>

    <string name="shared_pref_def_value_empty">empty</string>

    <string name="shared_pref_api_content_lang_key">apiContentLang</string>
    <string name="api_content_language_english">en</string>

    <string name="all_timestamp_format_full_day_name">EEEE</string>
    <string name="all_timestamp_format_hours_minutes">HH:mm</string>
    <string name="forecast_hourly_icon_wind_text">wind</string>

    <!--PersistenceDatabase-->
    <string name="persistence_database_city_name_tokyo">Tokyo</string>
    <string name="persistence_database_city_name_new_york">New York</string>
    <string name="persistence_database_city_name_paris">Paris</string>
    <string name="persistence_database_city_name_london">London</string>
    <string name="persistence_database_city_name_sydney">Sydney</string>
    <string name="persistence_database_city_name_sliven">Sliven</string>
    <string name="persistence_database_city_name_sofia">Sofia</string>

    <string name="all_alert_dialog_not_found_message">No data found.</string>

    <!--Forecast Hourly Adapter-->
    <string name="forecast_hourly_adapter_summary_txt_windy">Windy</string>
    <string name="forecast_hourly_summary_windy_txt">Windy</string>
    <string name="all_txt_forecast_not_available">Forecast not available \nPull down to refresh…</string>
    <string name="simple_date_format_day_of_week">EEEE</string>
    <string name="simple_date_format_hours_minutes">HH:mm</string>
    <string name="dialog_hourly_summary">
                %1$s: \n
                %2$s \n\n
                Temperature:\n %3$s \n\n
                Apparent Temperature:\n %4$s \n\n
                Humidity:\n %5$s \n\n
                Pressure:\n %6$s \n\n
                Wind Speed:\n %7$s \n\n
    </string>

    <string name="dialog_daily_summary">
                %1$s: \n
                %2$s \n\n
                Sunrise Time:\n %3$s \n\n
                Sunset Time:\n %4$s \n\n
                Humidity:\n %5$s \n\n
                Pressure:\n %6$s \n\n
                Wind Speed:\n %7$s \n\n
                Temperature Min:\n %8$s \n\n
                Temperature Min Time:\n %9$s \n\n
                Temperature Max:\n %10$s \n\n
                Temperature Max Time:\n %11$s
    </string>

    <string name="fragment_add_location_to_db_invalid_name_error">Invalid location name!</string>
    <string name="fragment_add_location_to_db_invalid_latitude_error">Invalid latitude!</string>
    <string name="fragment_add_location_to_db_invalid_longitude_error">Invalid longitude!</string>
    <string name="fragment_add_location_to_db_location_name">Enter location name:</string>
    <string name="fragment_add_location_to_db_location_latitude">Enter location latitude:</string>
    <string name="fragment_add_location_to_db_location_longitude">Enter location longitude:</string>
    <string name="fragment_add_location_to_db_btn_save_text">SAVE</string>
    <string name="main_screen_welcome_label">Welcome to WeatherApp</string>

</resources>
