<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:defaultValue="true"
        app:key="@string/preference_switch_themes_key"
        app:summary="@string/preference_switch_themes_summary"
        app:title="@string/preference_switch_themes_title" />

    <PreferenceCategory android:title="@string/preferences_category_feedback_title">
        <Preference
            app:key="@string/preference_feedback_key"
            app:summary="@string/preference_feedback_summary"
            app:title="@string/preference_feedback_title" />
    </PreferenceCategory>

    <ListPreference
        android:entries="@array/api_content_language_names"
        android:entryValues="@array/api_content_language_values"
        android:key="@string/shared_pref_api_content_lang_key"
        android:summary="%s"
        android:defaultValue="@string/English"
        android:title="Language" />
</PreferenceScreen>