<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/WeatherDetailsOverlayText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_between_elements_default"
    tools:context=".ui.fragment.main.MainFragment">

    <com.hristiyantodorov.weatherapp.view.LineTextView
        android:id="@+id/txt_welcome"
        android:layout_width="@dimen/no_dimens"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/main_screen_welcome_label"
        android:textSize="@dimen/material_design_headline_txt_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_from_current_location"
        style="@style/WeatherDetailsOverlayText"
        android:layout_width="@dimen/no_dimens"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_between_elements_default"
        android:background="@android:color/transparent"
        android:text="@string/main_screen_option_pick_location"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/material_design_btn_txt_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_from_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_welcome"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_from_list"
        style="@style/WeatherDetailsOverlayText"
        android:layout_width="@dimen/no_dimens"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_between_elements_default"
        android:background="@android:color/transparent"
        android:text="@string/main_screen_option_pick_from_list"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/material_design_btn_txt_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_from_current_location"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_from_current_location"
        app:layout_constraintTop_toBottomOf="@+id/btn_from_current_location" />

</android.support.constraint.ConstraintLayout>